--- a/css/estiloz.css
+++ b/css/estiloz.css
@@ -279,8 +279,8 @@ footer .redes .twitter:hover{
 
 }
 
-footer .redes .facebook:hover{
-  background: #3b5998;
+footer .redes .linkedin:hover{
+  background: #0a66c2;
 }
 
 footer .redes .instagram:hover{
