--- a/css/estiloz.css
+++ b/css/estiloz.css
@@ -88,7 +88,7 @@ header .contenedor-texto .texto .nombre{
 
 .main .acerca-de .foto{
   /*para que quede entre el header y el main*/
-  margin-top: -60px;
+  margin-top: -120px;
 }
 
 .main .acerca-de .foto img{
@@ -155,9 +155,21 @@ header .contenedor-texto .texto .nombre{
 }
 
 .main .trabajos .contenedor-trabajos .trabajo .thumb img{
+  
   width: 100%;
   vertical-align: top;
   border-radius: 3px;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+  opacity: 1;
+}
+
+
+.main .trabajos .contenedor-trabajos .trabajo .thumb img:hover {
+  opacity: 0.5;
 }
 
 .main .trabajos .contenedor-trabajos .trabajo .descripcion{
