fixed_minor_changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,9 +133,9 @@ header .contenedor-texto .texto h2{
   font-size: 34px;
   margin-bottom: 40px;
   font-weight: 300;
-  color:#323068;
+  color: #3895ea;
   text-align: center;
-  text-decoration: none;
+  
 }
 
 .main .trabajos .contenedor-trabajos{
